--- a/RestAPI/package.json
+++ b/RestAPI/package.json
@@ -1,7 +1,6 @@
 {
   "name": "restapi",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +14,6 @@
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15"
-  }
+  },
+  "description": ""
 }
